[Dataviews] Fix: Media item focus style is not visible on Grid.

--- a/packages/dataviews/src/dataviews-layouts/grid/style.scss
+++ b/packages/dataviews/src/dataviews-layouts/grid/style.scss
@@ -30,12 +30,14 @@
 			.dataviews-view-grid__fields .dataviews-view-grid__field .dataviews-view-grid__field-value {
 				color: $gray-900;
 			}
-
-			.dataviews-view-grid__media::after {
-				background-color: rgba(var(--wp-admin-theme-color--rgb), 0.08);
-				box-shadow: inset 0 0 0 $border-width var(--wp-admin-theme-color);
-			}
 		}
+		&.is-selected .dataviews-view-grid__media::after,
+		.dataviews-view-grid__media:focus:after {
+			background-color: rgba(var(--wp-admin-theme-color--rgb), 0.08);
+			box-shadow: inset 0 0 0 $border-width var(--wp-admin-theme-color);
+		}
+
+
 	}
 
 	.dataviews-view-grid__media {
